using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UniRx;

public class GameLoadingModel : MonoBehaviour
{
    [SerializeField] private GameObject SaveDatas;
    private SaveDataController saveController;
    public void loadGame()
    {

    }
    private void loadSaveData()
    {

    }
    private void goToMap()
    {

    }
}
