@startuml MapScene
class MapPresenter{
    +int playerPosition
    +void subscribe()
}
class ViewingPlayer{
    +int playerPosition
    -Transform currentPosition
    -Transform updatePosition()
}
namespace Model{
    class SelectingSkinModel{
        PossessionSkin possessionSkin
        {Static}Skin currentSkin
        void selectSkin()
    }
    class PossessionSkin{
        {static}List<Skin> possessionSkinList
        void addSkin(Skin skin)
    }
    class SkinDataBase{
        List<Skin> skinList
    }
    class Skin{
        sprite skinSprite
        List<Animation> skinAnimations
    }
class Map{
    +int amountStages
    +List<Scene> stages
    +List<GameObjct> tiles
    -int countStages()
    -void generateTils()
}
class PlayerPosition{
    +int currentStage
    -int Move()
    -int MaxStageRange()
}
class DecisionStage{
    -Scene currentScene
    -void DecideStage()
}
class GameSaving{
    -int currentStagePosition
    -int currentCoin
    -GameObject currentSkin
    -<static>List<Skin> possessionSkins
    -void SaveGame()
}
class GameLoading{
    -int currentStagePosition
    -int currentCoin
    -GameObject currentSkin
    -<static>List<Skin> possessionSkins
    -void LoadGame()
}
}
PlayerPosition-->Map
MapPresenter-->PlayerPosition
MapPresenter-->ViewingPlayer
@enduml